fixed styles paths

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="/styles/defaults.css">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="styles/defaults.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
     <title>OptiCode</title>
     <meta name="description" content="OptiCode, by Optical">
@@ -48,7 +48,7 @@
                     <p data-aos="fade-up">We believe that even the simplest mechanics can tell powerful stories and transmit unforgettable moments.</p>
                 </div>
                 <div class="service-image-container">
-                    <img src="/images/creative_code.png" alt="" data-aos="zoom-in" />
+                    <img src="images/creative_code.png" alt="" data-aos="zoom-in" />
                 </div>
             </div>
 
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="service-image-container">
-                    <img src="/images/creative_code.png" alt="Random C# class" data-aos="zoom-in" />
+                    <img src="images/creative_code.png" alt="Random C# class" data-aos="zoom-in" />
                 </div>
             </div>
         </div>
