fixed more problems with relative paths in HTML files

--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="/styles/defaults.css">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="styles/defaults.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
     <title>OptiCode</title>
     <meta name="description" content="OptiCode, by Optical">
