--- a/parts/header.html
+++ b/parts/header.html
@@ -1,10 +1,10 @@
 <nav class="navbar">
-    <a class="nav-brand" href="/">
+    <a class="nav-brand" href="index.html">
         <img id="nav-icon" src="images/opticode logo 532.png" alt="OptiCode Icon" />
         <span class="glowText">OptiCode</span>
     </a>
     <ul class="nav-links">
-        <li><a href="">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
