'browser games' instead of 'creative code' in index.html and fixed stylesheet links in about.html, projects.html, and 404.html.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p data-aos="fade-up">We believe that even the simplest mechanics can tell powerful stories and transmit unforgettable moments.</p>
                 </div>
                 <div class="service-image-container">
-                    <img src="images/creative_code.png" alt="" data-aos="zoom-in" />
+                    <img src="images/browser_games.png" alt="" data-aos="zoom-in" />
                 </div>
             </div>
 
