--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             </div>
         </div>
 
+        <div id="philosophy-quote">
+            <p>Code is just logic until you give it a purpose. We give it a soul.</p>
+        </div>
+
     </main>
 
 
