--- a/404.html
+++ b/404.html
@@ -29,7 +29,12 @@
     <main>
 
         <div id="not-found-container">
-            <h1>Page not found</h1>
+            <h1>404: Page not found</h1>
+
+            <p>
+                How did you even get here?
+            </p>
+
         </div>
 
     </main>
