--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
 
         <div id="philosophy-quote">
-            <p>Code is just logic until you give it a purpose. We give it a soul.</p>
+            <p>Code is just logic until you give it a purpose.</p>
         </div>
 
     </main>
