--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,16 @@
 
     <main>
 
+        <div class="games-preview-div">
+            <h1>Our Creations</h1>
+            <a href="https://pixel-siege.com/" target="_blank" class="game-preview-box">
+                <div class="pixel-siege-preview-div">
+                    <h2 class="game-preview-title">Pixel Siege</h2>
+                    <p class="game-preview-description">Pixel Siege is a browser-based strategy game where players build and defend their base against waves of enemies.</p>
+                </div>
+            </a>
+        </div>
+
     </main>
 
 
