--- a/404.html
+++ b/404.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="styles/defaults.css">
     <link rel="stylesheet" href="styles/styles.css">
 
-    <title>OptiCode</title>
-    <meta name="description" content="OptiCode, by Optical">
+    <title>Optical Labs</title>
+    <meta name="description" content="Optical Labs - 404 Page Not Found">
 </head>
 
 
