--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="styles/defaults.css">
     <link rel="stylesheet" href="styles/styles.css">
 
-    <title>OptiCode</title>
-    <meta name="description" content="OptiCode, by Optical">
+    <title>Optical Labs</title>
+    <meta name="description" content="Optical Labs - Front Page">
 </head>
 
 
@@ -34,7 +34,7 @@
 
 
         <div id="index-top-title">
-            <h1>OptiCode<span class="onOff">_</span></h1>
+            <h1>Optical Labs<span class="onOff">_</span></h1>
             <h2 class="letterSpacing">— Defined by emotion —</h2>
         </div>
 
