--- a/infinite-horizons.html
+++ b/infinite-horizons.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="styles/defaults.css">
     <link rel="stylesheet" href="styles/styles.css">
 
-    <title>OptiCode</title>
-    <meta name="description" content="OptiCode, by Optical">
+    <title>Optical Labs</title>
+    <meta name="description" content="Optical Labs - Infinite Horizons">
 </head>
 
 
