--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,1 +1,1 @@
-<p style="font-size: clamp(1rem, 1vw, 10rem); text-align: center">2026 OptiCode, by Optical</p>
+<p style="font-size: clamp(1rem, 1vw, 10rem); text-align: center">2026 Optical Labs</p>
