completed games page

--- a/404.html
+++ b/404.html
@@ -16,6 +16,7 @@
 
     <title>Optical Labs</title>
     <meta name="description" content="Optical Labs - 404 Page Not Found">
+    <link rel="icon" href="images/optical labs logo 50.png" type="image/x-icon">
 </head>
 
 
