--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
 
     <title>Optical Labs</title>
     <meta name="description" content="Optical Labs - About">
+    <link rel="icon" href="images/optical labs logo 50.png" type="image/x-icon">
 </head>
 
 
@@ -30,6 +31,12 @@
 
     <main>
 
+        <div id="not-found-container">
+            <h1>Come back later?</h1>
+
+            <p>This page is still under construction, sorry!</p>
+
+        </div>
     </main>
 
 
