--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <title>Optical Labs</title>
     <meta name="description" content="Optical Labs - Front Page">
+    <link rel="icon" href="images/optical labs logo 50.png" type="image/x-icon">
 </head>
 
 
