--- a/404.html
+++ b/404.html
@@ -11,12 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="styles/defaults.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/styles/defaults.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 
     <title>Optical Labs</title>
     <meta name="description" content="Optical Labs - 404 Page Not Found">
-    <link rel="icon" href="images/optical labs logo 50.png" type="image/x-icon">
+    <link rel="icon" href="/images/optical labs logo 50.png" type="image/x-icon">
 </head>
 
 
@@ -44,7 +44,7 @@
     <footer id="footer-placeholder"></footer>
 
 
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
