--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,4 @@
-
+﻿
 
 <!doctype html>
 <html lang="en">
@@ -13,12 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="styles/defaults.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/styles/defaults.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 
     <title>Optical Labs</title>
-    <meta name="description" content="Optical Labs - Infinite Horizons">
-    <link rel="icon" href="images/optical labs logo 50.png" type="image/x-icon">
+    <meta name="description" content="Optical Labs - About">
+    <link rel="icon" href="/images/optical labs logo 50.png" type="image/x-icon">
 </head>
 
 
@@ -37,14 +37,13 @@
             <p>This page is still under construction, sorry!</p>
 
         </div>
-
     </main>
 
 
     <footer id="footer-placeholder"></footer>
 
 
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
