--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="styles/defaults.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/styles/defaults.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 
     <title>Optical Labs</title>
     <meta name="description" content="Optical Labs - Front Page">
-    <link rel="icon" href="images/optical labs logo 50.png" type="image/x-icon">
+    <link rel="icon" href="/images/optical labs logo 50.png" type="image/x-icon">
 </head>
 
 
@@ -49,7 +49,7 @@
                     <p data-aos="fade-up">We believe that even the simplest mechanics can tell powerful stories and transmit unforgettable moments.</p>
                 </div>
                 <div class="service-image-container">
-                    <img src="images/browser_games.png" alt="" data-aos="zoom-in" />
+                    <img src="/images/browser_games.png" alt="" data-aos="zoom-in" />
                 </div>
             </div>
 
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="service-image-container">
-                    <img src="images/creative_code.png" alt="Random C# class" data-aos="zoom-in" />
+                    <img src="/images/creative_code.png" alt="Random C# class" data-aos="zoom-in" />
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
     <footer id="footer-placeholder"></footer>
 
 
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
