--- a/parts/header.html
+++ b/parts/header.html
@@ -1,11 +1,11 @@
 <nav class="navbar">
-    <a class="nav-brand" href="index.html">
-        <img id="nav-icon" src="images/optical labs logo 532.png" alt="Optical Labs Icon" />
+    <a class="nav-brand" href="/">
+        <img id="nav-icon" src="/images/optical labs logo 532.png" alt="Optical Labs Icon" />
         <span class="glowText">Optical Labs</span>
     </a>
     <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="/about">About</a></li>
     </ul>
 </nav>
