changed infinite horizons path

--- a/projects/index.html
+++ b/projects/index.html
@@ -83,7 +83,7 @@
                 <div class="game-preview-text-div" data-aos="zoom-in">
                     <h2 class="game-preview-title">Infinite Horizons</h2>
                     <p class="game-preview-description">Infinite Horizons is a sandbox that allows you to create any imaginable 2D world using the power of A.I.</p>
-                    <a href="/infinite-horizons" class="default-btn">More Info</a>
+                    <a href="/projects/infinite-horizons" class="default-btn">More Info</a>
                 </div>
                 
                 <div class="slideshow-container" data-aos="zoom-in">
