--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,7 @@
     <title>Optical Labs</title>
     <meta name="description" content="Optical Labs - About">
     <link rel="icon" href="/images/optical labs logo 50.png" type="image/x-icon">
+
 </head>
 
 
@@ -37,6 +38,11 @@
             <p>This page is still under construction, sorry!</p>
 
         </div>
+
+        <div id="paypal-container-9UVBX26E9PXW4"></div>
+
+
+        <a href="https://www.paypal.com/ncp/payment/9UVBX26E9PXW4" target="_blank" class="default-btn">Donate</a>
     </main>
 
 
@@ -44,6 +50,7 @@
 
 
     <script src="/js/main.js"></script>
+
 
 </body>
 
