Infinite Horizons Info Page

--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
         <div id="paypal-container-9UVBX26E9PXW4"></div>
 
 
-        <a href="https://www.paypal.com/ncp/payment/9UVBX26E9PXW4" target="_blank" class="default-btn">Donate</a>
+        <!--<a href="https://www.paypal.com/ncp/payment/9UVBX26E9PXW4" target="_blank" class="default-btn">Donate</a>-->
     </main>
 
 
