--- a/parts/header.html
+++ b/parts/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <a class="nav-brand" href="/">
         <img id="nav-icon" src="/images/optical labs logo 532.png" alt="Optical Labs Icon" />
-        <span class="glowText">Optical Labs</span>
+        <span>Optical Labs</span>
     </a>
     <ul class="nav-links">
         <li><a href="/">Home</a></li>
