--- a/projects/index.html
+++ b/projects/index.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
 
-            <hr>
+            <hr class="default-hr">
 
             <!-- Infinite Horizons -->
             <div class="game-preview-box">
